# labuse

./: .dockerignore  .env.example  .env.pilot.example  .gitignore  AMELIORATIONS-UX.md  ANNEXE_REVUE_AN_ER.md  ANNONCES_RECON.md  AUDIT.md  AUDIT_27_OUTILS.md  AUDIT_COMPLET.md  AUDIT_R1_BATI_CORRECTION.md  BILAN_ILE.md  BUGS.md  CLIENT_DEMO_CHECKLIST.md  COMMANDES.md  DEMO_ONE_PAGER.html  DEMO_PACK.md  DEMO_PACK_PRINT.html  DEMO_SETUP.md  DEPLOY_RUNBOOK.md  DESIGN_SYSTEM.md  DIAGNOSTIC.md  Dockerfile  ETAT_DES_LIEUX_DONE.md  LISEZMOI_MATIN.md  MANDAT_FABLE_HABITAT_SOLAIRE.md  MANDAT_FABLE_MODULE_FLASH.md  MANDAT_FABLE_MOTEUR_SEGMENTS_HABITAT.md  MANDAT_FABLE_WAVE_ADRESSES_COURRIER_IA.md  MANDAT_FABLE_WAVE_ANC_VEGETATION.md  MANDAT_FABLE_WAVE_COPRO_TERTIAIRE_FLUX.md  MANDAT_FABLE_WAVE_DETECTION_ORTHO.md  NOTES_BODACC.md  NOTES_CARTOFRICHES.md  NOTES_DPE.md  NOTES_ETAGE_0.md  NOTES_GEORISQUES.md  NOTES_INPI.md  NOTES_SCORING_DRYRUN.md  NOTES_SITADEL3.md  (+55 more)
.claude/hooks/: session-start.sh
audit_shots/ux_v1/: apres_console.json  avant_console.json
commercial/: OFFRE_PILOTE.md  PROPOSITION_PILOTE.md  PROSPECTION.md  PROSPECTS_20.md  SCRIPT_VENTE.md
config/: anc_vegetation.yaml  bilan_calibration_vic.csv  cascade_rules.yaml  communes_gold_standard.yaml  completeness_weights.yaml  detection_ortho.yaml  epci_974.yaml  gabarits_courrier.yaml  gestionnaires_via.yaml  habitat_solaire.yaml  mutation_weights.yaml  opportunity_weights.yaml  pipeline.yaml  plh_tco.yaml  plu_saint_denis.yaml  plu_saint_paul.yaml  rtaa_dom.yaml  scoring_matrice.yaml  segment_presets.yaml  segments.yaml  shortlist.yaml  wfs_layers.yaml
config/calibrage/: zonage_bras_panon.yaml  zonage_cilaos.yaml  zonage_entre_deux.yaml  zonage_l_etang_sale.yaml  zonage_la_plaine_des_palmistes.yaml  zonage_la_possession.yaml  zonage_le_port.yaml  zonage_le_tampon.yaml  zonage_les_avirons.yaml  zonage_les_trois_bassins.yaml  zonage_petite_ile.yaml  zonage_saint_andre.yaml  zonage_saint_benoit.yaml  zonage_saint_denis.yaml  zonage_saint_joseph.yaml  zonage_saint_leu.yaml  zonage_saint_louis.yaml  zonage_saint_paul.yaml  zonage_saint_philippe.yaml  zonage_saint_pierre.yaml  zonage_sainte_marie.yaml  zonage_sainte_rose.yaml  zonage_sainte_suzanne.yaml  zonage_salazie.yaml
data/: carte_loyers_reunion_2025.json  insee_occupation_reunion_2022.json  obsimmo_vente_reunion.json
data/anc/: office_eau_chronique_149_2023.csv
deploy/: Caddyfile.example  Caddyfile.prod
deploy/cron.d/: abuse  backup  ban  bodacc  catnat  dpe  dvf  radar  sitadel  solaire
deploy/env/: labuse.env.example
deploy/nginx/: labuse.conf
deploy/postgresql/: postgresql.vps2.conf
deploy/scripts/: backup_postgres.sh  db_maintenance.sh  demo_setup.sh  deploy_app.sh  pull_backups.sh  smoke_test.sh  sync-run.sh  ufw_setup.sh  vps_setup.sh  watch_prod.sh
deploy/systemd/: labuse.service
docs/: AI_ASSISTANT_SAFETY_AND_DEMO.md  AI_DEMO_CHECKLIST.md  ARGUMENTAIRE_PRECISION.md  AUDIT_COMPLET_LABUSE_APP_CODE.md  AUDIT_MULTICOMMUNE_24.md  AUDIT_PETITES_OPPORTUNITES_251_500.md  BACKUPS.md  BAREME_VERDICT_MUTABILITE.md  BASCULE_LIVE_CHECKLIST.md  BUILD_COMMUNES.md  CONTRIBUTING.md  DEMO.md  DEPLOIEMENT_M7_CHECKLIST.md  DEPLOYMENT_OVH_VPS.md  LEXIQUE_CLIENT.md  LOT6_GENERALISATION_23_COMMUNES_PLAN.md  LOT6_RUNBOOK.md  PROSPECTION_IMPORT.md  QA_POST_HOMOGENISATION_APP.md  QA_RADAR_MUTATION_V1.md  RELEASE_CANDIDATE_SAINT_PAUL_PILOT.md  ROADMAP_ALGO.md  RUNBOOK_ROTATION_CLES.md  SAINT_PAUL_LOT1_BACKUP_SECURITY.md  SAINT_PAUL_LOT2_IMPORT_PLAN.md  SAINT_PAUL_LOT2_RESULTS.md  SAINT_PAUL_PRODUCT_ACCEPTANCE_AUDIT.md  SAINT_PAUL_QUALITY_AUDIT.md  VOIRIE_CAP_5000_AUDIT.md  VOIRIE_REFETCH_RUNBOOK.md  VPS_GO_LIVE_CHECKLIST.md
docs/audits/: ACCES_EXTERNES.md  CLOISONNEMENT.md  CONVERGENCE_IA.md  CORRECTION_P0.md  LABUSE_EN_CHIFFRES.md  POINTS_MANUELS.md  SECRETS_CARTOGRAPHIE.md  SECURITE.md  SYNTHESE_360.md
frontend/: .gitignore  DERIVATIONS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
outputs/: top30_chaudes_q_v2.html
qa/: README.md  atlas.mjs  captures.mjs  e2e.mjs  e2e_429.mjs  e2e_anc_vegetation.mjs  e2e_audit_fixes.mjs  e2e_habitat_solaire.mjs  e2e_m10.mjs  e2e_m9_fiche.mjs  e2e_m_via.mjs  e2e_wave_aci.mjs  e2e_wave_ortho.mjs  golden_check.py  loadtest.py  m61_ui.mjs  smoke_prod.sh
scripts/: _commune_worker.py  a1_bascule_v7.py  a1_challenger_v.py  a1_defisc_backtest.py  a1_svg.py  a1_walkforward.py  backup_daily.sh  build_communes.py  calibrage_zonage.py  demo_faisabilite.py  dev_db.sh  dpe_passoires_cadrage.py  extend_cascade_ile.py  gen_tops_ile.py  gpu_witness_test.py  import_commune_gold_standard.py  ingest_conso_enaf.py  ingest_insee_logement.py  ingest_npnru.py  ingest_rpls.py  ingest_sru.py  j3_gel_anchors.py  j3_golden_proposition.py  j3_revue_dossier.py  lot2_import_saint_paul.py  m2_projet_migration.sql  pc_caducs_backtest.py  pc_caducs_challenger.py  post_run_ile.sh  purge_runs_obsoletes.sql  render_top_chaudes.py  run_ile_q_v2.sh
tests/: conftest.py  nl_queries.txt  test_abf_merimee.py  test_adresses_autocomplete.py  test_agorah_plu_connector.py  test_ai.py  test_ai_core.py  test_alertes.py  test_amenites.py  test_anc.py  test_anti_fiche.py  test_api.py  test_api_q_v2.py  test_arene.py  test_assemblage.py  test_assistant.py  test_audit.py  test_audit_conformite.py  test_audit_secu.py  test_audit_stripe.py  test_audit_ui_fixes.py  test_auth.py  test_backup.py  test_ban_adresses.py  test_banquier.py  test_bati.py  test_bilan.py  test_bilan_calibrate.py  test_bodacc.py  test_cadrage_niveaux.py  test_calibration.py  test_carnet.py  test_cartofriches.py  test_cascade.py  test_cascade_engine.py  test_cli_resolve.py  test_communes_gold_standard.py  test_comparateur.py  test_comptes.py  test_connectors.py  (+115 more)
(+785 files in other folders)
