[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labuse"
version = "0.1.0"
description = "LA BUSE — radar foncier intelligent de La Réunion (moteur de pré-qualification parcellaire)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# Les dépendances exactes sont épinglées dans requirements.txt (installées en venv).
dependencies = [
  "SQLAlchemy>=2.0",
  "GeoAlchemy2>=0.14",
  "psycopg[binary]>=3.1",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "PyYAML>=6.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.26",
  "shapely>=2.0",
  "pyproj>=3.6",
  "pyshp>=2.3",
  "typer>=0.9",
  "jsonschema>=4.21",
  "fpdf2>=2.8",
  "weasyprint>=61",
  "jinja2>=3.1",
  "stripe>=8",
]

[project.optional-dependencies]
# Provider IA réel (sinon provider "stub" hors-ligne par défaut).
ai = ["anthropic>=0.40"]
# Outils de dev / CI (tests + lint).
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
labuse = "labuse.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# F = pyflakes (vraies erreurs : imports inutilisés, noms indéfinis) ; I = tri des imports ; E/W = style.
select = ["F", "I", "E", "W"]
ignore = ["E501"]  # longueur de ligne gérée par le formateur, pas bloquante

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "db: tests nécessitant une base PostGIS accessible (voir conftest)",
  "network: tests nécessitant un accès réseau sortant (souvent bloqué en CI sandbox)",
]
